implementando VotoMapper e ajustando DTOs e Testes