@@ -1,7 +1,9 @@
 package br.tec.db.votacao.service.impl;
 
-import br.tec.db.votacao.dto.VotoDTO;
+import br.tec.db.votacao.dto.votoDTO.BuscarVotoDTO;
+import br.tec.db.votacao.dto.votoDTO.VotarDTO;
 import br.tec.db.votacao.enums.SessaoDeVotacaoStatusEnum;
+import br.tec.db.votacao.mapper.VotoMapper;
 import br.tec.db.votacao.model.Associado;
 import br.tec.db.votacao.model.SessaoDeVotacao;
 import br.tec.db.votacao.model.Voto;
@@ -32,38 +34,35 @@ public class VotoServiceImpl implements VotoService {
     }
 
     @Override
-    public VotoDTO votar(VotoDTO votoDTO) {
-        SessaoDeVotacao sessaoDeVotacao = sessaoDeVotacaoRepository.findById(votoDTO.idSessaoDeVotacao()).orElseThrow();
-        Associado associado = associadoRepository.findById(votoDTO.idAssociado()).orElseThrow();
+    public Voto votar(VotarDTO votarDTO) {
+        SessaoDeVotacao sessaoDeVotacao = sessaoDeVotacaoRepository.findById(votarDTO.idSessaoDeVotacao()).orElseThrow();
+        Associado associado = associadoRepository.findById(votarDTO.idAssociado()).orElseThrow();
         if (sessaoDeVotacao.getStatus().equals(SessaoDeVotacaoStatusEnum.ENCERRADA)) {
             throw new RuntimeException("Sessão de votação encerrada");
         } else if (sessaoDeVotacao.getVotos().stream().anyMatch(voto -> voto.getAssociado().getId().equals(associado.getId()))) {
             throw new RuntimeException("Associado já votou nesta sessão");
         } else {
-            Voto voto = new Voto();
-            voto.setAssociado(associado);
-            voto.setSessaoDeVotacao(sessaoDeVotacao);
-            voto.setStatus(votoDTO.voto());
+            Voto voto = VotoMapper.buildVoto(votarDTO);
             sessaoDeVotacao.getVotos().add(voto);
             votoRepository.save(voto);
-            return new VotoDTO(voto);
+            return votoRepository.save(voto);
         }
     }
 
     @Override
-    public VotoDTO buscarVotoPorId(Long id) {
-        Voto voto = votoRepository.findById(id).orElseThrow();
-        return new VotoDTO(voto);
+    public BuscarVotoDTO buscarVotoPorId(Long id) {
+        Voto voto = votoRepository.findById(id).orElseThrow(() -> new RuntimeException("Voto não encontrado"));
+        return new BuscarVotoDTO(voto);
     }
 
     @Override
-    public List<VotoDTO> buscarTodosOsVotos() {
-        return votoRepository.findAll().stream().map(VotoDTO::new).collect(Collectors.toList());
+    public List<BuscarVotoDTO> buscarTodosOsVotos() {
+        return votoRepository.findAll().stream().map(BuscarVotoDTO::new).toList();
     }
 
     @Override
-    public List<VotoDTO> buscarVotosPorSessaoDeVotacao(Long id) {
-        SessaoDeVotacao sessaoDeVotacao = sessaoDeVotacaoRepository.findById(id).orElseThrow();
-        return sessaoDeVotacao.getVotos().stream().map(VotoDTO::new).collect(Collectors.toList());
+    public List<BuscarVotoDTO> buscarVotosPorSessaoDeVotacao(Long id) {
+        SessaoDeVotacao sessaoDeVotacao = sessaoDeVotacaoRepository.findById(id).orElseThrow(() -> new RuntimeException("Sessão de votação não encontrada"));
+        return sessaoDeVotacao.getVotos().stream().map(BuscarVotoDTO::new).collect(Collectors.toList());
     }
 }
